Bug 114592 - gtk3, x11: Floating toolbar is jumping while dragging
Summary: gtk3, x11: Floating toolbar is jumping while dragging
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0 target:6.0.0.2
Keywords: bibisected, bisected, regression
: 114594 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2017-12-20 13:08 UTC by Maxim Monastirsky
Modified: 2017-12-23 23:04 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2017-12-20 13:08:21 UTC
Steps to reproduce:

1. Either make sure to run a Xorg session, or export GDK_BACKEND=x11 when under Wayland.
2. Open Writer using the gtk3 vclplug.
3. Undock some toolbar.
4. Try to move it around, by dragging the title bar.

In general, the toolbar is very hard to move, and constantly jumping around. The jumping is more severe when under a Wayland session.
Comment 1 Xisco Faulí 2017-12-20 21:13:56 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2017-10-17 14:26:38 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2017-10-17 21:48:33 +0200
commit ebb2b8cedefcb32eadec191ef70225430ad154c0 (patch)
tree b4c89f34c1dbf262a1fbdf3b0a0dea838f1050cd
parent dc8c9d8052293055f31b56fcd5db56ce13306a65 (diff)
tdf#112845 rtl dropdowns in wrong position
for rtl we mirror the position of popdowns, so we need
to know their initial desired position before they have actually
appeared yet and have a valid maGeometry.nX, so fill in the
hoped-for position as the current position

Bisected with: bibisect-linux64-6.0

Adding Cc: to Caolán McNamara
Comment 2 Xisco Faulí 2017-12-20 21:16:04 UTC
*** Bug 114594 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2017-12-21 14:25:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c96ded851bc6887693e4ecbc1f5961dc430613c

Resolves: tdf#114592 mark geometry as provisional

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2017-12-21 17:17:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=236d245428ec290f9b5efe4cd68996a7d4e6509e&h=libreoffice-6-0

Resolves: tdf#114592 mark geometry as provisional

It will be available in 6.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2017-12-21 21:15:04 UTC
backport in gerrit, closed, until the next problem at least
Comment 6 Maxim Monastirsky 2017-12-23 23:04:02 UTC
Fix verified, thanks!