Resolves: tdf#114592 mark geometry as provisional

when we predict what it will be and use that flag to decide
to forward notification of arrival of confirmation of geometry

Change-Id: I4a7334d75eb7977c85aebcf2b652cc4b2d6b25bb
Reviewed-on: https://gerrit.libreoffice.org/46911
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>